[gd_scene load_steps=23 format=3 uid="uid://cgxgkt8sytllx"]

[ext_resource type="Script" uid="uid://mt1c1xfe57tn" path="res://Entitys/Player/player.gd" id="1_uu7px"]
[ext_resource type="PackedScene" uid="uid://be02x5klrfm6h" path="res://Entitys/Player/player_model.tscn" id="2_citt6"]
[ext_resource type="Script" uid="uid://x2ywbchcq87m" path="res://Classes/StateMachine.gd" id="2_nhjll"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://gb7a38j1g1eb" path="res://Entitys/Player/animation_state_tree.tres" id="2_s5t43"]
[ext_resource type="Script" uid="uid://cgdttaygd0fgb" path="res://Entitys/Player/States/idle.gd" id="3_r7b4u"]
[ext_resource type="Script" uid="uid://c8uelnggxlgjw" path="res://Entitys/Player/States/running.gd" id="4_evqkl"]
[ext_resource type="Script" uid="uid://bbolgc8le1o8v" path="res://Entitys/Player/States/wall_sliding.gd" id="5_8je53"]
[ext_resource type="Script" uid="uid://dyd0rf8f2v7k5" path="res://Entitys/Player/States/jumping.gd" id="6_46lr4"]
[ext_resource type="Script" uid="uid://bvbatwm22yh3a" path="res://Entitys/Player/States/falling.gd" id="7_r3ve6"]
[ext_resource type="Script" uid="uid://dof4f7dkgnvms" path="res://Entitys/Player/States/throwing_sword.gd" id="8_1h3lh"]
[ext_resource type="Script" uid="uid://d3clbfubufpwu" path="res://Entitys/Player/States/sliding.gd" id="9_s7pro"]
[ext_resource type="Script" uid="uid://cin4taxljppl0" path="res://Entitys/Player/States/long_jump.gd" id="10_aiamn"]
[ext_resource type="Script" uid="uid://c11gkbxu0c88e" path="res://Entitys/Player/States/ledge_grab.gd" id="11_dbqqt"]
[ext_resource type="Script" uid="uid://dldfxjykjwlxe" path="res://Entitys/Player/States/sword_return.gd" id="13_46lr4"]
[ext_resource type="PackedScene" uid="uid://blv7qct83d44x" path="res://Entitys/Sword/throw_sword.tscn" id="14_8je53"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://Entitys/Player/cloud.res" id="14_evqkl"]
[ext_resource type="Script" uid="uid://o6wmtimnf6n" path="res://Entitys/Player/States/throwing_sword_down.gd" id="14_r3ve6"]

[sub_resource type="Curve" id="Curve_8je53"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s5t43"]
radius = 0.275963
height = 1.35503

[sub_resource type="Curve" id="Curve_evqkl"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.243902, 1), 0.0, 0.0, 0, 0, Vector2(0.99458, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_8je53"]
curve = SubResource("Curve_evqkl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8je53"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_min = 0.75
scale_curve = SubResource("CurveTexture_8je53")

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
floor_constant_speed = true
floor_max_angle = 0.959931
floor_snap_length = 0.5
script = ExtResource("1_uu7px")
debug = true
max_fast_speed = 7.0
model_tilt_speed = 2.0
max_tilt_angle = 30.0
air_deaccel_factor = 2.0
accel_factor = 10.0
accelcurve = SubResource("Curve_8je53")
inital_slide_force = 4.5
max_slop_velo_length = 12.0
long_jump_height = 9.0
long_jump_turn_speed = 7.0
long_jump_air_deaccel_factor = 1.2
max_long_jump_velo_length = 12.0
sword_throw_down_force = 900.0
sword_throw_down_jump_boost = 5.0
horizantal_ledge_offset = 0.3
vertical_ledge_offset = 1.3
time_to_ledge = 0.1
ledge_stopping_distance = 0.5
mouse_sensitivity = 0.3
max_pitch = 45.0
metadata/_custom_type_script = "uid://mt1c1xfe57tn"

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
root_node = NodePath("../Model")
tree_root = ExtResource("2_s5t43")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../Model/AnimationPlayer")
parameters/Ledge_Hang/blend_position = 0
"parameters/Sliding/Slide Loop/TimeScale/scale" = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.679508, 0)
shape = SubResource("CapsuleShape3D_s5t43")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_nhjll")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://x2ywbchcq87m"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_r7b4u")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("4_evqkl")

[node name="WallSliding" type="Node" parent="StateMachine"]
script = ExtResource("5_8je53")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("6_46lr4")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("7_r3ve6")

[node name="coyote_timer" type="Timer" parent="StateMachine/Falling"]
wait_time = 0.1
one_shot = true

[node name="Throwing Sword" type="Node" parent="StateMachine"]
script = ExtResource("8_1h3lh")

[node name="end_timer" type="Timer" parent="StateMachine/Throwing Sword"]
wait_time = 0.45
one_shot = true

[node name="throw_time" type="Timer" parent="StateMachine/Throwing Sword"]
wait_time = 0.333
one_shot = true

[node name="throw_cooldown" type="Timer" parent="StateMachine/Throwing Sword"]
wait_time = 0.5
one_shot = true

[node name="Sliding" type="Node" parent="StateMachine"]
script = ExtResource("9_s7pro")

[node name="coyote_timer" type="Timer" parent="StateMachine/Sliding"]
wait_time = 0.1
one_shot = true

[node name="slide_end_timer" type="Timer" parent="StateMachine/Sliding"]
wait_time = 0.4
one_shot = true

[node name="Long Jump" type="Node" parent="StateMachine"]
script = ExtResource("10_aiamn")

[node name="Ledge Grab" type="Node" parent="StateMachine"]
script = ExtResource("11_dbqqt")

[node name="let_go_timer" type="Timer" parent="StateMachine/Ledge Grab"]
wait_time = 0.2
one_shot = true

[node name="Sword Return" type="Node" parent="StateMachine"]
script = ExtResource("13_46lr4")

[node name="end_timer" type="Timer" parent="StateMachine/Sword Return"]
wait_time = 0.2
one_shot = true

[node name="Throwing Sword Down" type="Node" parent="StateMachine"]
script = ExtResource("14_r3ve6")

[node name="end_timer" type="Timer" parent="StateMachine/Throwing Sword Down"]
wait_time = 0.2
one_shot = true

[node name="throw_time" type="Timer" parent="StateMachine/Throwing Sword Down"]
wait_time = 0.15
one_shot = true

[node name="Model" parent="." instance=ExtResource("2_citt6")]

[node name="Skeleton3D" parent="Model/Armature" index="0"]
bones/0/position = Vector3(5.35103e-18, 0.0489592, -0.0960813)
bones/0/rotation = Quaternion(0.0572716, 1.29459e-26, 5.89616e-18, 0.998359)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(0.179849, 1.17265e-07, -3.34649e-08, 0.983694)
bones/2/rotation = Quaternion(-0.042511, 0.0126201, 0.0264454, 0.998666)
bones/3/rotation = Quaternion(-0.206872, 0.0849788, -0.0115046, 0.974603)
bones/4/position = Vector3(0.14984, 0.202831, -0.00318747)
bones/4/rotation = Quaternion(0.543046, -0.282463, -0.548829, 0.5693)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.52385, -2.29638e-08, 2.11414e-07, 0.85181)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.194138, -0.906595, -0.348933, 0.136537)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(-0.146397, 0.196028, -0.002125)
bones/7/rotation = Quaternion(0.646266, 0.439953, 0.443708, 0.438069)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.00229408, -1.14176e-08, 9.91512e-09, 0.999997)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.40447, 0.676653, 0.489673, 0.372512)
bones/9/scale = Vector3(1, 1, 1)
bones/10/position = Vector3(0.0723203, 0.0829796, 0.336429)
bones/10/rotation = Quaternion(-0.0601257, 0.0646871, -0.899766, -0.427343)
bones/11/position = Vector3(-0.0516644, 0.0767025, 0.495005)
bones/11/rotation = Quaternion(-0.0412353, -0.0344785, 0.993211, -0.103167)
bones/12/position = Vector3(0.0982633, -0.0118562, 6.95522e-08)
bones/12/rotation = Quaternion(-0.0367757, 0.326472, 0.936664, -0.121341)
bones/12/scale = Vector3(1, 1, 1.00003)
bones/13/rotation = Quaternion(-0.249246, 0.000129841, -0.00802462, 0.968407)
bones/13/scale = Vector3(1, 0.999995, 1.00001)
bones/14/rotation = Quaternion(0.597902, -0.0855047, -0.0834954, 0.79261)
bones/14/scale = Vector3(1, 0.999999, 1)
bones/15/rotation = Quaternion(0.0737278, 0.278722, 0.93879, 0.188551)
bones/15/scale = Vector3(1, 1, 1.00003)
bones/16/rotation = Quaternion(-0.00229463, -0.000134079, 7.38998e-05, 0.999997)
bones/16/scale = Vector3(1, 0.999997, 1.00001)
bones/17/rotation = Quaternion(0.560856, 0.193255, 0.0605202, 0.802765)
bones/17/scale = Vector3(1, 0.999999, 1)
bones/18/position = Vector3(0, 0.0918443, -0.178003)
bones/18/rotation = Quaternion(0, 0, 0, 1)
bones/18/scale = Vector3(1, 1, 1)
bones/19/position = Vector3(-0.0536745, 0.0907524, 0.220424)
bones/19/rotation = Quaternion(0.54795, 0.373998, 0.694218, 0.279173)
bones/19/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(0.199947, -0.378895, 0.0530031)
bones/21/rotation = Quaternion(-2.23448e-05, 0.733174, -0.680041, 2.40907e-05)
bones/23/position = Vector3(0.393381, 0.340464, 0.1335)
bones/24/position = Vector3(-0.258315, -0.387932, 0.136094)
bones/24/rotation = Quaternion(2.60334e-05, 0.610132, -0.7923, -2.00478e-05)
bones/26/position = Vector3(-0.393381, 0.340464, 0.1335)

[node name="Sword" parent="Model/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.17105, 0.969614, -0.174903, -0.941132, 0.213327, 0.262227, 0.291569, 0.119753, 0.949024, 0.0301572, -0.0593422, 1.28136)

[node name="Sword" parent="Model/Armature/Skeleton3D/Sword" index="0"]
visible = false

[node name="Raycasts" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.703941, 0)

[node name="LedgeRayLeft" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.693118, 0.421734)
target_position = Vector3(0, -0.6, 0)

[node name="LedgeRay" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.693232, 0.421511)
target_position = Vector3(0, -0.6, 0)

[node name="LedgeRayRight" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0.693118, 0.421734)
target_position = Vector3(0, -0.6, 0)

[node name="LedgeRayHorizontal" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.147868, 0.168163)
target_position = Vector3(0, 0, 0.5)

[node name="WallCheckRay" type="RayCast3D" parent="Raycasts"]
target_position = Vector3(0, 0, 1.4)

[node name="SwordSocket" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.17105, 0.969614, -0.174903, -0.941132, 0.213327, 0.262227, 0.291569, 0.119753, 0.949024, 0.0301572, 0.467414, 1.28136)
bone_name = "Sword"
bone_idx = 20
use_external_skeleton = true
external_skeleton = NodePath("../Model/Armature/Skeleton3D")

[node name="offset" type="Marker3D" parent="SwordSocket"]
transform = Transform3D(-0.64427, -2.16089e-07, 0.764798, 3.01708e-08, -1, -2.57128e-07, 0.764798, -1.42585e-07, 0.644271, -0.0819688, -0.179619, -0.662516)

[node name="Sword" parent="SwordSocket/offset" node_paths=PackedStringArray("player", "curve_point") instance=ExtResource("14_8je53")]
player = NodePath("../../..")
curve_point = NodePath("../../../CurvePoint")

[node name="CurvePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.85717, 0.810398, -0.907995)

[node name="SwordSpawnPoints" type="Node3D" parent="."]

[node name="SwordSpawnNormal" type="Marker3D" parent="SwordSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0172864, 0.705812, 0.928029)

[node name="SwordSpawnDownward" type="Marker3D" parent="SwordSpawnPoints"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.0172864, 0.478706, 0.979501)

[node name="ParticleTrail" type="GPUParticles3D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_8je53")
draw_pass_1 = ExtResource("14_evqkl")

[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]
[connection signal="timeout" from="StateMachine/Falling/coyote_timer" to="StateMachine/Falling" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="StateMachine/Throwing Sword/end_timer" to="StateMachine/Throwing Sword" method="_on_end_timer_timeout"]
[connection signal="timeout" from="StateMachine/Throwing Sword/throw_time" to="StateMachine/Throwing Sword" method="_on_throw_time_timeout"]
[connection signal="timeout" from="StateMachine/Throwing Sword/throw_cooldown" to="StateMachine/Throwing Sword" method="_on_throw_cooldown_timeout"]
[connection signal="timeout" from="StateMachine/Sliding/coyote_timer" to="StateMachine/Sliding" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="StateMachine/Sliding/slide_end_timer" to="StateMachine/Sliding" method="_on_slide_end_timer_timeout"]
[connection signal="timeout" from="StateMachine/Ledge Grab/let_go_timer" to="StateMachine/Ledge Grab" method="_on_let_go_timer_timeout"]
[connection signal="timeout" from="StateMachine/Sword Return/end_timer" to="StateMachine/Sword Return" method="_on_end_timer_timeout"]
[connection signal="timeout" from="StateMachine/Throwing Sword Down/end_timer" to="StateMachine/Throwing Sword Down" method="_on_end_timer_timeout"]
[connection signal="timeout" from="StateMachine/Throwing Sword Down/throw_time" to="StateMachine/Throwing Sword Down" method="_on_throw_time_timeout"]
[connection signal="back_to_player" from="SwordSocket/offset/Sword/StateMachine/Return" to="." method="_on_return_back_to_player"]

[editable path="Model"]
[editable path="SwordSocket/offset/Sword"]
